HelloUltraviolet/Fixtures/RejectedSource/Statements/BlocksDiagnostic/Expected.uv
//! Expected diagnostic metadata for the BlocksDiagnostic rejected-source specimen.

expectedDiagnostic("E-SRC-0520", "diag.18.Blocks")
